@@ -274,6 +274,7 @@ class XOM:
 
     def create_app(self):
         from devpi_server.view_auth import DevpiAuthenticationPolicy
+        from devpi_server.views import OutsideURLMiddleware
         from devpi_server.views import route_url
         from pyramid.authorization import ACLAuthorizationPolicy
         from pyramid.config import Configurator
@@ -341,7 +342,7 @@ class XOM:
             # pypi changelog protocol
             self.thread_pool.register(self.pypimirror,
                                       dict(proxy=self.proxy))
-        return app
+        return OutsideURLMiddleware(app, self)
 
     def is_replica(self):
         return bool(self.config.args.master_url)
